--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
     "react-router-dom": "^7.9.2",
     "react-spinners": "^0.17.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.13",
     "yup": "^1.7.1"
   },
