--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.2",
     "react-spinners": "^0.17.0",
     "socket.io-client": "^4.8.1",
