--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_API_URL=http://localhost:4000/api/v1
+VITE_CLOUDINARY_CLOUD_NAME=dxe1qhhun
+VITE_CLOUDINARY_UPLOAD_PRESET=event_images_unsigned
 
 
